[gd_scene load_steps=14 format=2]

[ext_resource path="res://Resources/puzzle6/Puzzle6.gd" type="Script" id=1]
[ext_resource path="res://Resources/item_asset/pixil-frame-0-82-ConvertImage.png" type="Texture" id=2]
[ext_resource path="res://Resources/Flowchart_GUI/1start.png" type="Texture" id=3]
[ext_resource path="res://Resources/Flowchart_GUI/1start_pressed.png" type="Texture" id=4]
[ext_resource path="res://Resources/puzzle6/start.gd" type="Script" id=5]
[ext_resource path="res://Resources/Flowchart_GUI/2process.png" type="Texture" id=6]
[ext_resource path="res://Resources/Flowchart_GUI/2prcoess_pressed.png" type="Texture" id=7]
[ext_resource path="res://Resources/puzzle6/input.gd" type="Script" id=8]
[ext_resource path="res://Resources/puzzle6/output.gd" type="Script" id=9]
[ext_resource path="res://Resources/Flowchart_GUI/4end.png" type="Texture" id=10]
[ext_resource path="res://Resources/Flowchart_GUI/4end_pressed.png" type="Texture" id=11]
[ext_resource path="res://Resources/puzzle6/end.gd" type="Script" id=12]
[ext_resource path="res://Resources/Menu/Menu_Button.tscn" type="PackedScene" id=13]

[node name="Puzzle6" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_right = 629.0
margin_bottom = 400.0
window_title = "Flowchart Problem #6"

[node name="Panel" type="Panel" parent="WindowDialog"]
margin_left = 2.80505
margin_right = 630.805
margin_bottom = 400.0

[node name="RichTextLabel" type="RichTextLabel" parent="WindowDialog/Panel"]
margin_left = 468.0
margin_top = 155.0
margin_right = 617.0
margin_bottom = 302.0

[node name="connecting lines" type="TextureRect" parent="WindowDialog/Panel"]
margin_left = 321.864
margin_top = 70.8478
margin_right = 361.864
margin_bottom = 120.848
texture = ExtResource( 2 )

[node name="connecting lines2" type="TextureRect" parent="WindowDialog/Panel"]
margin_left = 320.988
margin_top = 165.453
margin_right = 360.988
margin_bottom = 215.453
texture = ExtResource( 2 )

[node name="connecting lines3" type="TextureRect" parent="WindowDialog/Panel"]
margin_left = 322.068
margin_top = 267.041
margin_right = 362.069
margin_bottom = 317.041
texture = ExtResource( 2 )

[node name="start" type="TextureButton" parent="WindowDialog/Panel"]
margin_left = 260.34
margin_top = 27.4028
margin_right = 390.341
margin_bottom = 77.4028
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Label" type="Label" parent="WindowDialog/Panel/start"]
margin_left = 41.0184
margin_top = 17.9732
margin_right = 81.0184
margin_bottom = 31.9732

[node name="input" type="TextureButton" parent="WindowDialog/Panel"]
margin_left = 263.001
margin_top = 110.888
margin_right = 393.001
margin_bottom = 160.888
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
script = ExtResource( 8 )

[node name="Label" type="Label" parent="WindowDialog/Panel/input"]
margin_left = -264.05
margin_top = 7.60004
margin_right = -171.05
margin_bottom = 30.6

[node name="output" type="TextureButton" parent="WindowDialog/Panel"]
margin_left = 262.098
margin_top = 217.277
margin_right = 392.098
margin_bottom = 267.277
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
script = ExtResource( 9 )

[node name="Label" type="Label" parent="WindowDialog/Panel/output"]
margin_left = -178.158
margin_top = 13.602
margin_right = -138.158
margin_bottom = 27.602

[node name="end" type="TextureButton" parent="WindowDialog/Panel"]
margin_left = 263.048
margin_top = 313.971
margin_right = 393.049
margin_bottom = 363.971
toggle_mode = true
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
script = ExtResource( 12 )

[node name="Label" type="Label" parent="WindowDialog/Panel/end"]
margin_left = 45.6001
margin_top = 18.05
margin_right = 85.6001
margin_bottom = 32.05

[node name="Button" type="Button" parent="WindowDialog/Panel"]
margin_left = 521.002
margin_top = 358.879
margin_right = 615.002
margin_bottom = 383.879
text = "Submit"

[node name="Menu_Button" parent="WindowDialog/Panel" instance=ExtResource( 13 )]
position = Vector2( 521.282, 309.702 )
scale = Vector2( 0.329249, 0.429874 )
[connection signal="toggled" from="WindowDialog/Panel/start" to="." method="_on_start_toggled"]
[connection signal="toggled" from="WindowDialog/Panel/input" to="." method="_on_input_toggled"]
[connection signal="toggled" from="WindowDialog/Panel/output" to="." method="_on_output_toggled"]
[connection signal="toggled" from="WindowDialog/Panel/end" to="." method="_on_end_toggled"]
[connection signal="pressed" from="WindowDialog/Panel/Button" to="." method="_on_Button_pressed"]
